--- a/arc.html
+++ b/arc.html
@@ -63,7 +63,7 @@
         Please enter a valid address so you can receive it.
     </div>
 
-    <p><strong>After submitting, the ARC PDF will automatically open.</strong></p>
+    <p><strong>After submitting, the ARC PDF will emailed to you within 24 hours</strong></p>
 
     <!-- FORM START -->
     <form action="https://formspree.io/f/xkozzovj" method="POST">
