--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://marccianfarani.substack.com" class="btn">Subscribe on Substack</a>
             <a href="chapters/chapter1_styled.pdf" class="btn">Read First Chapter</a>
             <a href="author.html" class="btn">About the Author</a> 
+            <a hre="https://www.amazon.ca/dp/B0GM2ZD5SZ class="btn">Order now on Amazon</a>
         </div>
     </div>
 </header>
